// Copyright 2018-2019 Red Hat, Inc.
// Copyright (c) 2018-2019 Cisco and/or its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at:
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// This contains the core Network Service Mesh API definitions for external
// consumption via gRPC protobufs.

syntax = "proto3";

package connectioncontext;
option go_package = "github.com/networkservicemesh/api/pkg/api/networkservice";

message IpNeighbor {
    string ip = 1;
    string hardware_address = 2;
}

message Route {
    string prefix = 1; /* destination address + prefix in format <address>/<prefix> */
}

message IpFamily {
    enum Family {
        IPV4 = 0;
        IPV6 = 1;
    }
    Family family = 1;
}

message ExtraPrefixRequest {
    IpFamily addr_family    = 1;
    uint32 prefix_len       = 2;
    uint32 required_number  = 3;
    uint32 requested_number = 4;
}

message IPContext {
    string src_ip_addr = 1; /* source ip address + prefix in format <address>/<prefix> */
    string dst_ip_addr = 2; /* destination ip address + prefix in format <address>/<prefix> */

    bool src_ip_required = 3; /* if specified src_ip is required from NSE. */
    bool dst_ip_required = 4; /* if specified dst_ip is required from NSE */

    repeated Route src_routes = 5; /* a list of routes via src_ip_addr as gateway */
    repeated Route dst_routes = 6; /* a list of routes via dst_ip_addr as gateway */

    repeated string excluded_prefixes = 7; /* a list of excluded passed to NSE */

    repeated IpNeighbor ip_neighbors = 8; /* A lists of ARP table neighbours addresses */

    repeated ExtraPrefixRequest extra_prefix_request = 9; /* A request for NSE to provide extra prefixes */
    repeated string extra_prefixes = 10; /* A list of extra prefixes requested */
}

message DNSConfig {
    /* ips of DNS Servers for this DNSConfig.  Any given IP may be IPv4 or IPv6 */
    repeated string dns_server_ips = 1;
    /* domains for which this DNSConfig provides resolution.  If empty, all domains. */
    repeated string search_domains = 2;
}

message DNSContext {
    repeated DNSConfig configs = 1;
}

message EthernetContext {
    string src_mac = 1;
    string dst_mac = 2;
}

message ConnectionContext {
    IPContext ip_context = 1; /* IP related context */
    DNSContext dns_context = 2; /* DNS related context */
    EthernetContext ethernet_context = 3;
}
